	- Fixed ICP bug when we send queries, but expect zero
	  replies.
	- Fixed alignment/casting bugs for ICP messages.

Changes to squid-1.2.beta16 (Mar 4, 1998):

	- Added Portugese erorr messages from Pedro Lineu Orso
	- Added a simple but very effective hack to cachemgr.cgi that tries to
	  interpret lines with '\t' as table records and formats them
	  accordingly. With a few exceptions (see source code), first line
	  becomes a table heading ("<th>" html tag) and the rest is formated
	  with "<td>" tags.
	- Added "mem_pools_limit" configuration option. Semantics of
	  "mem_pools" option has also changed a bit to reflect new memory
	  management policy.
	- Reorganized memory pools. Squid now supports a global pool
	  limit instead of individual pool limits. Per-pool limits can be
	  implemented on top of the current scheme if needed, but it is
	  probably hard to guess their values.  Squid distributes pool
	  memory among "frequently allocated" objects.  There is a
	  configurable limit on the total amount of "idle" memory to be
	  kept in reserve. All requests that exceed that amount are
	  satisfied using malloc library.  Support for variable size
	  objects (mostly strings) will be enabled soon.
	- memAllocate() has now only one parameter. Objects are always
	  reset with 0s. (We actually never used that parameter before;
	  it was always set to "clear").
	- Added Squid "signature" to all ERR_ pages. The signature is
	  hardcoded and is added on-the-fly. The signature may use
	  %-escapes.  Added interface to add more hard-coded responses if
	  needed (see errorpage.c::error_hard_text).
	- Both default and configured directories are searched for ERR_
	  pages now. Configured directory is, of course, searched first.
	  This allows you to customize a subset of ERR_ pages (in a
	  separate directory) without danger of getting other copies out
	  of sync.
	- Security controls for the SNMP agent added. Besides
	  communities (like password) and views (part of tree