@@ -64,6 +64,7 @@ section 57    HTTP Status-line
 section 58    HTTP Reply (Response)
 section 59    auto-growing Memory Buffer with printf
 section 60    Packer: A uniform interface to store-like modules
+section 61    Pump module for PUT/POST
 section 62    Generic Histogram
 section 63    Low Level Memory Pool Management
 section 64    HTTP Content-Range Header
